Fix Ruff format

--- a/run_example/hopwise-using-all-items-for-prediction.ipynb
+++ b/run_example/hopwise-using-all-items-for-prediction.ipynb
@@ -16,9 +16,10 @@
    },
    "source": [
     "# Overview\n",
-    "**Tutorial**: recbole-using-all-items-for-prediction\n",
+    "**Tutorial**: hopwise-using-all-items-for-prediction\n",
     "\n",
-    "**Author**: [astrung](https://github.com/astrung)\n",
+    "**Author**: [astrung](https://github.com/astrung)<br>\n",
+    "**Format**: [jackmedda](https://github.com/jackmedda)\n",
     "\n",
     "**Original link**: [notebook](https://www.kaggle.com/code/astrung/recbole-using-all-items-for-prediction/notebook)\n",
     "\n",
@@ -41,11 +42,11 @@
     "\n",
     "In my previous notebook, i use last row result as recommendation, **so we still using nearly all of items as input for recommendation, except last item(item C)**. Our recommendation in previous notebooks may be not perfect, but it is simple as a tutorial for anyone want to start.\n",
     "\n",
-    "**Note: This mechanism is only for sequential model in recbole. For other types of model, it isn't correct - it won't use items in test data for getting recommendation. If you have requests for explaining for other model, please upvote and comment. I will explain it in other notebook**\n",
+    "**Note: This mechanism is only for sequential model in hopwise. For other types of model, it isn't correct - it won't use items in test data for getting recommendation. If you have requests for explaining for other model, please upvote and comment. I will explain it in other notebook**\n",
     "\n",
     "In first session of this notebook, i will dig into test data to prove this conclusion.\n",
     "\n",
-    "2. Yes, we can get recommendation by using all of items as input features, without splitting train/test. In order to do this, you need to modify recbole code:\n",
+    "2. Yes, we can get recommendation by using all of items as input features, without splitting train/test. In order to do this, you need to modify hopwise code:\n",
     "* Fist, you copy last row in dataset(input features have all items, except last one), then add last item into input features.\n",
     "* Then you predict directly from model api, without using [full_sort_score or full_sort_topk](https://recbole.io/docs/user_guide/usage/case_study.html)\n",
     "\n",
@@ -78,12 +79,12 @@
     "\n",
     "For proving it, we will create a dataset, then extract input features and label in test data.\n",
     "\n",
-    "### 1. Let create test data in recbole"
+    "### 1. Let create test data in hopwise"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "796894e4",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -104,78 +105,9 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting recbole\r\n",
-      "  Downloading recbole-1.0.1-py3-none-any.whl (2.0 MB)\r\n",
-      "     |████████████████████████████████| 2.0 MB 537 kB/s            \r\n",
-      "\u001b[?25hRequirement already satisfied: pandas>=1.0.5 in /opt/conda/lib/python3.7/site-packages (from recbole) (1.3.5)\r\n",
-      "Collecting colorlog==4.7.2\r\n",
-      "  Downloading colorlog-4.7.2-py2.py3-none-any.whl (10 kB)\r\n",
-      "Collecting scipy==1.6.0\r\n",
-      "  Downloading scipy-1.6.0-cp37-cp37m-manylinux1_x86_64.whl (27.4 MB)\r\n",
-      "     |████████████████████████████████| 27.4 MB 99 kB/s              \r\n",
-      "\u001b[?25hRequirement already satisfied: torch>=1.7.0 in /opt/conda/lib/python3.7/site-packages (from recbole) (1.9.1)\r\n",
-      "Requirement already satisfied: colorama==0.4.4 in /opt/conda/lib/python3.7/site-packages (from recbole) (0.4.4)\r\n",
-      "Requirement already satisfied: numpy>=1.17.2 in /opt/conda/lib/python3.7/site-packages (from recbole) (1.20.3)\r\n",
-      "Requirement already satisfied: pyyaml>=5.1.0 in /opt/conda/lib/python3.7/site-packages (from recbole) (6.0)\r\n",
-      "Requirement already satisfied: tensorboard>=2.5.0 in /opt/conda/lib/python3.7/site-packages (from recbole) (2.6.0)\r\n",
-      "Requirement already satisfied: scikit-learn>=0.23.2 in /opt/conda/lib/python3.7/site-packages (from recbole) (1.0.1)\r\n",
-      "Requirement already satisfied: tqdm>=4.48.2 in /opt/conda/lib/python3.7/site-packages (from recbole) (4.62.3)\r\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in /opt/conda/lib/python3.7/site-packages (from pandas>=1.0.5->recbole) (2.8.2)\r\n",
-      "Requirement already satisfied: pytz>=2017.3 in /opt/conda/lib/python3.7/site-packages (from pandas>=1.0.5->recbole) (2021.3)\r\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /opt/conda/lib/python3.7/site-packages (from scikit-learn>=0.23.2->recbole) (3.0.0)\r\n",
-      "Requirement already satisfied: joblib>=0.11 in /opt/conda/lib/python3.7/site-packages (from scikit-learn>=0.23.2->recbole) (1.1.0)\r\n",
-      "Requirement already satisfied: tensorboard-plugin-wit>=1.6.0 in /opt/conda/lib/python3.7/site-packages (from tensorboard>=2.5.0->recbole) (1.8.0)\r\n",
-      "Requirement already satisfied: setuptools>=41.0.0 in /opt/conda/lib/python3.7/site-packages (from tensorboard>=2.5.0->recbole) (59.5.0)\r\n",
-      "Requirement already satisfied: google-auth-oauthlib<0.5,>=0.4.1 in /opt/conda/lib/python3.7/site-packages (from tensorboard>=2.5.0->recbole) (0.4.6)\r\n",
-      "Requirement already satisfied: requests<3,>=2.21.0 in /opt/conda/lib/python3.7/site-packages (from tensorboard>=2.5.0->recbole) (2.26.0)\r\n",
-      "Requirement already satisfied: werkzeug>=0.11.15 in /opt/conda/lib/python3.7/site-packages (from tensorboard>=2.5.0->recbole) (2.0.2)\r\n",
-      "Requirement already satisfied: absl-py>=0.4 in /opt/conda/lib/python3.7/site-packages (from tensorboard>=2.5.0->recbole) (0.15.0)\r\n",
-      "Requirement already satisfied: tensorboard-data-server<0.7.0,>=0.6.0 in /opt/conda/lib/python3.7/site-packages (from tensorboard>=2.5.0->recbole) (0.6.1)\r\n",
-      "Requirement already satisfied: wheel>=0.26 in /opt/conda/lib/python3.7/site-packages (from tensorboard>=2.5.0->recbole) (0.37.0)\r\n",
-      "Requirement already satisfied: protobuf>=3.6.0 in /opt/conda/lib/python3.7/site-packages (from tensorboard>=2.5.0->recbole) (3.19.4)\r\n",
-      "Requirement already satisfied: google-auth<2,>=1.6.3 in /opt/conda/lib/python3.7/site-packages (from tensorboard>=2.5.0->recbole) (1.35.0)\r\n",
-      "Requirement already satisfied: grpcio>=1.24.3 in /opt/conda/lib/python3.7/site-packages (from tensorboard>=2.5.0->recbole) (1.43.0)\r\n",
-      "Requirement already satisfied: markdown>=2.6.8 in /opt/conda/lib/python3.7/site-packages (from tensorboard>=2.5.0->recbole) (3.3.6)\r\n",
-      "Requirement already satisfied: typing-extensions in /opt/conda/lib/python3.7/site-packages (from torch>=1.7.0->recbole) (4.1.1)\r\n",
-      "Requirement already satisfied: six in /opt/conda/lib/python3.7/site-packages (from absl-py>=0.4->tensorboard>=2.5.0->recbole) (1.16.0)\r\n",
-      "Requirement already satisfied: cachetools<5.0,>=2.0.0 in /opt/conda/lib/python3.7/site-packages (from google-auth<2,>=1.6.3->tensorboard>=2.5.0->recbole) (4.2.4)\r\n",
-      "Requirement already satisfied: pyasn1-modules>=0.2.1 in /opt/conda/lib/python3.7/site-packages (from google-auth<2,>=1.6.3->tensorboard>=2.5.0->recbole) (0.2.7)\r\n",
-      "Requirement already satisfied: rsa<5,>=3.1.4 in /opt/conda/lib/python3.7/site-packages (from google-auth<2,>=1.6.3->tensorboard>=2.5.0->recbole) (4.8)\r\n",
-      "Requirement already satisfied: requests-oauthlib>=0.7.0 in /opt/conda/lib/python3.7/site-packages (from google-auth-oauthlib<0.5,>=0.4.1->tensorboard>=2.5.0->recbole) (1.3.0)\r\n",
-      "Requirement already satisfied: importlib-metadata>=4.4 in /opt/conda/lib/python3.7/site-packages (from markdown>=2.6.8->tensorboard>=2.5.0->recbole) (4.11.3)\r\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/conda/lib/python3.7/site-packages (from requests<3,>=2.21.0->tensorboard>=2.5.0->recbole) (1.26.7)\r\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.7/site-packages (from requests<3,>=2.21.0->tensorboard>=2.5.0->recbole) (2021.10.8)\r\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in /opt/conda/lib/python3.7/site-packages (from requests<3,>=2.21.0->tensorboard>=2.5.0->recbole) (2.0.9)\r\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.7/site-packages (from requests<3,>=2.21.0->tensorboard>=2.5.0->recbole) (3.1)\r\n",
-      "Requirement already satisfied: zipp>=0.5 in /opt/conda/lib/python3.7/site-packages (from importlib-metadata>=4.4->markdown>=2.6.8->tensorboard>=2.5.0->recbole) (3.6.0)\r\n",
-      "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in /opt/conda/lib/python3.7/site-packages (from pyasn1-modules>=0.2.1->google-auth<2,>=1.6.3->tensorboard>=2.5.0->recbole) (0.4.8)\r\n",
-      "Requirement already satisfied: oauthlib>=3.0.0 in /opt/conda/lib/python3.7/site-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<0.5,>=0.4.1->tensorboard>=2.5.0->recbole) (3.1.1)\r\n",
-      "Installing collected packages: scipy, colorlog, recbole\r\n",
-      "  Attempting uninstall: scipy\r\n",
-      "    Found existing installation: scipy 1.7.3\r\n",
-      "    Uninstalling scipy-1.7.3:\r\n",
-      "      Successfully uninstalled scipy-1.7.3\r\n",
-      "  Attempting uninstall: colorlog\r\n",
-      "    Found existing installation: colorlog 6.6.0\r\n",
-      "    Uninstalling colorlog-6.6.0:\r\n",
-      "      Successfully uninstalled colorlog-6.6.0\r\n",
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\r\n",
-      "pymc3 3.11.5 requires scipy<1.8.0,>=1.7.3, but you have scipy 1.6.0 which is incompatible.\r\n",
-      "pdpbox 0.2.1 requires matplotlib==3.1.1, but you have matplotlib 3.5.1 which is incompatible.\r\n",
-      "featuretools 1.6.0 requires numpy>=1.21.0, but you have numpy 1.20.3 which is incompatible.\r\n",
-      "arviz 0.11.4 requires typing-extensions<4,>=3.7.4.3, but you have typing-extensions 4.1.1 which is incompatible.\u001b[0m\r\n",
-      "Successfully installed colorlog-4.7.2 recbole-1.0.1 scipy-1.6.0\r\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install recbole"
+    "%pip install hopwise"
    ]
   },
   {
@@ -610,7 +542,7 @@
     "tags": []
    },
    "source": [
-    "Create data file in recbole format"
+    "Create data file in hopwise format"
    ]
   },
   {
@@ -682,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2f9f96fd",
    "metadata": {
     "execution": {
@@ -705,11 +637,12 @@
    "source": [
     "import logging\n",
     "from logging import getLogger\n",
-    "from recbole.config import Config\n",
-    "from recbole.data import create_dataset, data_preparation\n",
-    "from recbole.model.sequential_recommender import GRU4Rec\n",
-    "from recbole.trainer import Trainer\n",
-    "from recbole.utils import init_seed, init_logger"
+    "\n",
+    "from hopwise.config import Config\n",
+    "from hopwise.data import create_dataset, data_preparation\n",
+    "from hopwise.model.sequential_recommender import GRU4Rec\n",
+    "from hopwise.trainer import Trainer\n",
+    "from hopwise.utils import init_logger, init_seed"
    ]
   },
   {
@@ -779,7 +712,7 @@
     "tags": []
    },
    "source": [
-    "Now let start spliting train data and test data in recbole"
+    "Now let start spliting train data and test data in hopwise"
    ]
   },
   {
@@ -1120,7 +1053,7 @@
     "tags": []
    },
    "source": [
-    "Recbole use an internal ids for identify user_id and item_id, so let convert this user_id and his items into internal ids.\n",
+    "Hopwise use an internal ids for identify user_id and item_id, so let convert this user_id and his items into internal ids.\n",
     "* customer_id: `0109ad0b5a76924a1b58be677409bb601cc8bead9a87b8ce5b08a4a1f5bc71ef` -> internal user id: 2\n",
     "* last bought item_id: [..., '0698286004', '0861478002', '0901955001'] -> internal item id: [..., 3237, 4377, 4559]"
    ]
@@ -1696,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "76330a66",
    "metadata": {
     "execution": {
@@ -1731,7 +1664,8 @@
    ],
    "source": [
     "import torch\n",
-    "from recbole.data.interaction import Interaction\n",
+    "\n",
+    "from hopwise.data.interaction import Interaction\n",
     "\n",
     "\n",
     "def add_last_item(old_interaction, last_item_id, max_len=50):\n",
@@ -1828,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "28361728",
    "metadata": {
     "execution": {
@@ -1850,7 +1784,8 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from recbole.data.interaction import Interaction\n",
+    "\n",
+    "from hopwise.data.interaction import Interaction\n",
     "\n",
     "\n",
     "def add_last_item(old_interaction, last_item_id, max_len=50):\n",
