--- a/run_example/lstm-model-with-item-infor-fix-missing-last-item.ipynb
+++ b/run_example/lstm-model-with-item-infor-fix-missing-last-item.ipynb
@@ -17,7 +17,8 @@
     "# 0.Overview\n",
     "**Tutorial**: lstm-model-with-item-infor-fix-missing-last-item\n",
     "\n",
-    "**Author**: [astrung](https://github.com/astrung)\n",
+    "**Author**: [astrung](https://github.com/astrung)<br>\n",
+    "**Format**: [jackmedda](https://github.com/jackmedda)\n",
     "\n",
     "**Original link**: [notebook](https://www.kaggle.com/code/astrung/lstm-model-with-item-infor-fix-missing-last-item)\n",
     "\n",
@@ -43,11 +44,11 @@
     "\n",
     "We will follow below steps for creating model:\n",
     "\n",
-    "1. In order to use Recbole, we create atomic file from interaction data and item data\n",
-    "2. Because we only use Recbole model for predicting with users who buy more than 40 items, other users will need to fill by default recomendation items. We create most viewed items in last month as defautl recomendation\n",
-    "3. We create dataset and train model in recbole.\n",
+    "1. In order to use Hopwise, we create atomic file from interaction data and item data\n",
+    "2. Because we only use Hopwise model for predicting with users who buy more than 40 items, other users will need to fill by default recomendation items. We create most viewed items in last month as defautl recomendation\n",
+    "3. We create dataset and train model in Hopwise.\n",
     "4. We create prediction result by trained model\n",
-    "5. We combine recomendation result from most viewed items in last month and Recbole predicted model.\n",
+    "5. We combine recomendation result from most viewed items in last month and Hopwise predicted model.\n",
     "\n",
     "I will explain more detail in following cells.\n",
     "\n"
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f2a64764",
    "metadata": {
     "execution": {
@@ -74,79 +75,9 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting recbole\r\n",
-      "  Downloading recbole-1.0.1-py3-none-any.whl (2.0 MB)\r\n",
-      "     |████████████████████████████████| 2.0 MB 533 kB/s            \r\n",
-      "\u001b[?25hCollecting scipy==1.6.0\r\n",
-      "  Downloading scipy-1.6.0-cp37-cp37m-manylinux1_x86_64.whl (27.4 MB)\r\n",
-      "     |████████████████████████████████| 27.4 MB 100 kB/s             \r\n",
-      "\u001b[?25hRequirement already satisfied: pandas>=1.0.5 in /opt/conda/lib/python3.7/site-packages (from recbole) (1.3.5)\r\n",
-      "Collecting colorlog==4.7.2\r\n",
-      "  Downloading colorlog-4.7.2-py2.py3-none-any.whl (10 kB)\r\n",
-      "Requirement already satisfied: colorama==0.4.4 in /opt/conda/lib/python3.7/site-packages (from recbole) (0.4.4)\r\n",
-      "Requirement already satisfied: tqdm>=4.48.2 in /opt/conda/lib/python3.7/site-packages (from recbole) (4.62.3)\r\n",
-      "Requirement already satisfied: pyyaml>=5.1.0 in /opt/conda/lib/python3.7/site-packages (from recbole) (6.0)\r\n",
-      "Requirement already satisfied: scikit-learn>=0.23.2 in /opt/conda/lib/python3.7/site-packages (from recbole) (0.23.2)\r\n",
-      "Requirement already satisfied: torch>=1.7.0 in /opt/conda/lib/python3.7/site-packages (from recbole) (1.9.1)\r\n",
-      "Requirement already satisfied: numpy>=1.17.2 in /opt/conda/lib/python3.7/site-packages (from recbole) (1.20.3)\r\n",
-      "Requirement already satisfied: tensorboard>=2.5.0 in /opt/conda/lib/python3.7/site-packages (from recbole) (2.6.0)\r\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in /opt/conda/lib/python3.7/site-packages (from pandas>=1.0.5->recbole) (2.8.2)\r\n",
-      "Requirement already satisfied: pytz>=2017.3 in /opt/conda/lib/python3.7/site-packages (from pandas>=1.0.5->recbole) (2021.3)\r\n",
-      "Requirement already satisfied: joblib>=0.11 in /opt/conda/lib/python3.7/site-packages (from scikit-learn>=0.23.2->recbole) (1.1.0)\r\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /opt/conda/lib/python3.7/site-packages (from scikit-learn>=0.23.2->recbole) (3.0.0)\r\n",
-      "Requirement already satisfied: tensorboard-plugin-wit>=1.6.0 in /opt/conda/lib/python3.7/site-packages (from tensorboard>=2.5.0->recbole) (1.8.0)\r\n",
-      "Requirement already satisfied: grpcio>=1.24.3 in /opt/conda/lib/python3.7/site-packages (from tensorboard>=2.5.0->recbole) (1.43.0)\r\n",
-      "Requirement already satisfied: absl-py>=0.4 in /opt/conda/lib/python3.7/site-packages (from tensorboard>=2.5.0->recbole) (0.15.0)\r\n",
-      "Requirement already satisfied: tensorboard-data-server<0.7.0,>=0.6.0 in /opt/conda/lib/python3.7/site-packages (from tensorboard>=2.5.0->recbole) (0.6.1)\r\n",
-      "Requirement already satisfied: google-auth<2,>=1.6.3 in /opt/conda/lib/python3.7/site-packages (from tensorboard>=2.5.0->recbole) (1.35.0)\r\n",
-      "Requirement already satisfied: markdown>=2.6.8 in /opt/conda/lib/python3.7/site-packages (from tensorboard>=2.5.0->recbole) (3.3.6)\r\n",
-      "Requirement already satisfied: wheel>=0.26 in /opt/conda/lib/python3.7/site-packages (from tensorboard>=2.5.0->recbole) (0.37.0)\r\n",
-      "Requirement already satisfied: google-auth-oauthlib<0.5,>=0.4.1 in /opt/conda/lib/python3.7/site-packages (from tensorboard>=2.5.0->recbole) (0.4.6)\r\n",
-      "Requirement already satisfied: setuptools>=41.0.0 in /opt/conda/lib/python3.7/site-packages (from tensorboard>=2.5.0->recbole) (59.5.0)\r\n",
-      "Requirement already satisfied: werkzeug>=0.11.15 in /opt/conda/lib/python3.7/site-packages (from tensorboard>=2.5.0->recbole) (2.0.2)\r\n",
-      "Requirement already satisfied: protobuf>=3.6.0 in /opt/conda/lib/python3.7/site-packages (from tensorboard>=2.5.0->recbole) (3.19.1)\r\n",
-      "Requirement already satisfied: requests<3,>=2.21.0 in /opt/conda/lib/python3.7/site-packages (from tensorboard>=2.5.0->recbole) (2.26.0)\r\n",
-      "Requirement already satisfied: typing-extensions in /opt/conda/lib/python3.7/site-packages (from torch>=1.7.0->recbole) (4.0.1)\r\n",
-      "Requirement already satisfied: six in /opt/conda/lib/python3.7/site-packages (from absl-py>=0.4->tensorboard>=2.5.0->recbole) (1.16.0)\r\n",
-      "Requirement already satisfied: pyasn1-modules>=0.2.1 in /opt/conda/lib/python3.7/site-packages (from google-auth<2,>=1.6.3->tensorboard>=2.5.0->recbole) (0.2.7)\r\n",
-      "Requirement already satisfied: cachetools<5.0,>=2.0.0 in /opt/conda/lib/python3.7/site-packages (from google-auth<2,>=1.6.3->tensorboard>=2.5.0->recbole) (4.2.4)\r\n",
-      "Requirement already satisfied: rsa<5,>=3.1.4 in /opt/conda/lib/python3.7/site-packages (from google-auth<2,>=1.6.3->tensorboard>=2.5.0->recbole) (4.8)\r\n",
-      "Requirement already satisfied: requests-oauthlib>=0.7.0 in /opt/conda/lib/python3.7/site-packages (from google-auth-oauthlib<0.5,>=0.4.1->tensorboard>=2.5.0->recbole) (1.3.0)\r\n",
-      "Requirement already satisfied: importlib-metadata>=4.4 in /opt/conda/lib/python3.7/site-packages (from markdown>=2.6.8->tensorboard>=2.5.0->recbole) (4.10.1)\r\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.7/site-packages (from requests<3,>=2.21.0->tensorboard>=2.5.0->recbole) (3.1)\r\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in /opt/conda/lib/python3.7/site-packages (from requests<3,>=2.21.0->tensorboard>=2.5.0->recbole) (2.0.9)\r\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.7/site-packages (from requests<3,>=2.21.0->tensorboard>=2.5.0->recbole) (2021.10.8)\r\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/conda/lib/python3.7/site-packages (from requests<3,>=2.21.0->tensorboard>=2.5.0->recbole) (1.26.7)\r\n",
-      "Requirement already satisfied: zipp>=0.5 in /opt/conda/lib/python3.7/site-packages (from importlib-metadata>=4.4->markdown>=2.6.8->tensorboard>=2.5.0->recbole) (3.6.0)\r\n",
-      "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in /opt/conda/lib/python3.7/site-packages (from pyasn1-modules>=0.2.1->google-auth<2,>=1.6.3->tensorboard>=2.5.0->recbole) (0.4.8)\r\n",
-      "Requirement already satisfied: oauthlib>=3.0.0 in /opt/conda/lib/python3.7/site-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<0.5,>=0.4.1->tensorboard>=2.5.0->recbole) (3.1.1)\r\n",
-      "Installing collected packages: scipy, colorlog, recbole\r\n",
-      "  Attempting uninstall: scipy\r\n",
-      "    Found existing installation: scipy 1.7.3\r\n",
-      "    Uninstalling scipy-1.7.3:\r\n",
-      "      Successfully uninstalled scipy-1.7.3\r\n",
-      "  Attempting uninstall: colorlog\r\n",
-      "    Found existing installation: colorlog 6.6.0\r\n",
-      "    Uninstalling colorlog-6.6.0:\r\n",
-      "      Successfully uninstalled colorlog-6.6.0\r\n",
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\r\n",
-      "yellowbrick 1.3.post1 requires numpy<1.20,>=1.16.0, but you have numpy 1.20.3 which is incompatible.\r\n",
-      "pdpbox 0.2.1 requires matplotlib==3.1.1, but you have matplotlib 3.5.1 which is incompatible.\r\n",
-      "imbalanced-learn 0.9.0 requires scikit-learn>=1.0.1, but you have scikit-learn 0.23.2 which is incompatible.\r\n",
-      "featuretools 1.4.1 requires numpy>=1.21.0, but you have numpy 1.20.3 which is incompatible.\r\n",
-      "arviz 0.11.4 requires typing-extensions<4,>=3.7.4.3, but you have typing-extensions 4.0.1 which is incompatible.\u001b[0m\r\n",
-      "Successfully installed colorlog-4.7.2 recbole-1.0.1 scipy-1.6.0\r\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install recbole"
+    "%pip install hopwise"
    ]
   },
   {
@@ -186,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a2d005de",
    "metadata": {
     "execution": {
@@ -428,8 +359,9 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
     "import gc\n",
+    "\n",
+    "import pandas as pd\n",
     "\n",
     "df = pd.read_csv(\n",
     "    r\"/kaggle/input/h-and-m-personalized-fashion-recommendations/articles.csv\", dtype={\"article_id\": \"str\"}\n",
@@ -1636,7 +1568,7 @@
     "tags": []
    },
    "source": [
-    "We save atomic file in dataset format for using with recbole"
+    "We save atomic file in dataset format for using with hopwise"
    ]
   },
   {
@@ -1698,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "4950cf8b",
    "metadata": {
     "execution": {
@@ -1719,7 +1651,6 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
     "import numpy as np\n",
     "import pandas as pd"
    ]
@@ -2081,7 +2012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "26885807",
    "metadata": {
     "execution": {
@@ -2106,7 +2037,7 @@
     "del sub0[\"prediction1\"]\n",
     "del sub0[\"prediction2\"]\n",
     "gc.collect()\n",
-    "sub0.to_csv(f\"submission.csv\", index=False)"
+    "sub0.to_csv(\"submission.csv\", index=False)"
    ]
   },
   {
@@ -2162,14 +2093,14 @@
     "tags": []
    },
    "source": [
-    "# 3. Create dataset and train model with Recbole\n",
+    "# 3. Create dataset and train model with Hopwise\n",
     "\n",
-    "For anyone need instruction document, please check this link: https://recbole.io/docs/user_guide/usage/use_modules.html"
+    "For anyone need instruction document, please check this link: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "f0ac4e7a",
    "metadata": {
     "execution": {
@@ -2192,11 +2123,12 @@
    "source": [
     "import logging\n",
     "from logging import getLogger\n",
-    "from recbole.config import Config\n",
-    "from recbole.data import create_dataset, data_preparation\n",
-    "from recbole.model.sequential_recommender import GRU4RecF\n",
-    "from recbole.trainer import Trainer\n",
-    "from recbole.utils import init_seed, init_logger"
+    "\n",
+    "from hopwise.config import Config\n",
+    "from hopwise.data import create_dataset, data_preparation\n",
+    "from hopwise.model.sequential_recommender import GRU4RecF\n",
+    "from hopwise.trainer import Trainer\n",
+    "from hopwise.utils import init_logger, init_seed"
    ]
   },
   {
@@ -2622,12 +2554,12 @@
    "source": [
     "# 4. Create recommendation result from trained model\n",
     "\n",
-    "I note document here for any one want to customize it: https://recbole.io/docs/user_guide/usage/case_study.html"
+    "I note document here for any one want to customize it: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "9cbfb308",
    "metadata": {
     "execution": {
@@ -2648,16 +2580,14 @@
    },
    "outputs": [],
    "source": [
-    "from recbole.utils.case_study import full_sort_topk\n",
-    "\n",
     "external_user_ids = dataset.id2token(dataset.uid_field, list(range(dataset.user_num)))[\n",
     "    1:\n",
-    "]  # fist element in array is 'PAD'(default of Recbole) ->remove it"
+    "]  # fist element in array is 'PAD'(default of Hopwise) ->remove it"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "d7e54de4",
    "metadata": {
     "execution": {
@@ -2679,7 +2609,8 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from recbole.data.interaction import Interaction\n",
+    "\n",
+    "from hopwise.data.interaction import Interaction\n",
     "\n",
     "\n",
     "def add_last_item(old_interaction, last_item_id, max_len=50):\n",
@@ -2713,7 +2644,7 @@
     "        new_inter = Interaction(test)\n",
     "        new_inter = new_inter.to(config[\"device\"])\n",
     "        new_scores = model.full_sort_predict(new_inter)\n",
-    "        new_scores = new_scores.view(-1, test_data.dataset.item_num)\n",
+    "        new_scores = new_scores.view(-1, test_data.dataset.item_num)  # noqa; F821\n",
     "        new_scores[:, 0] = -np.inf  # set scores of [pad] to -inf\n",
     "    return torch.topk(new_scores, 12)"
    ]
