Fix Ruff format jupyter notebooks

--- a/run_example/lstm-model-with-item-infor-fix-missing-last-item.ipynb
+++ b/run_example/lstm-model-with-item-infor-fix-missing-last-item.ipynb
@@ -2378,7 +2378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "e27072f2",
    "metadata": {
     "execution": {
@@ -2623,7 +2623,7 @@
     "    return new_seq_items.view(1, len(new_seq_items))\n",
     "\n",
     "\n",
-    "def predict_for_all_item(external_user_id, dataset, model):\n",
+    "def predict_for_all_item(external_user_id, dataset, model, test_data):\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
     "        uid_series = dataset.token2id(dataset.uid_field, [external_user_id])\n",
@@ -2644,14 +2644,14 @@
     "        new_inter = Interaction(test)\n",
     "        new_inter = new_inter.to(config[\"device\"])\n",
     "        new_scores = model.full_sort_predict(new_inter)\n",
-    "        new_scores = new_scores.view(-1, test_data.dataset.item_num)  # noqa; F821\n",
+    "        new_scores = new_scores.view(-1, test_data.dataset.item_num)\n",
     "        new_scores[:, 0] = -np.inf  # set scores of [pad] to -inf\n",
     "    return torch.topk(new_scores, 12)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "e6c29c5a",
    "metadata": {
     "execution": {
@@ -2687,7 +2687,7 @@
     }
    ],
    "source": [
-    "predict_for_all_item(\"0109ad0b5a76924a1b58be677409bb601cc8bead9a87b8ce5b08a4a1f5bc71ef\", dataset, model)"
+    "predict_for_all_item(\"0109ad0b5a76924a1b58be677409bb601cc8bead9a87b8ce5b08a4a1f5bc71ef\", dataset, model, test_data)"
    ]
   },
   {
