--- a/run_example/sequential-model-fixed-missing-last-item.ipynb
+++ b/run_example/sequential-model-fixed-missing-last-item.ipynb
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f06dc674",
    "metadata": {
     "execution": {
@@ -814,7 +814,6 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
     "import numpy as np\n",
     "import pandas as pd"
    ]
@@ -1176,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "0d39bc15",
    "metadata": {
     "execution": {
@@ -1201,7 +1200,7 @@
     "del sub0[\"prediction1\"]\n",
     "del sub0[\"prediction2\"]\n",
     "gc.collect()\n",
-    "sub0.to_csv(f\"submission.csv\", index=False)"
+    "sub0.to_csv(\"submission.csv\", index=False)"
    ]
   },
   {
@@ -1759,7 +1758,7 @@
     "    return new_seq_items.view(1, len(new_seq_items))\n",
     "\n",
     "\n",
-    "def predict_for_all_item(external_user_id, dataset, model):\n",
+    "def predict_for_all_item(external_user_id, dataset, model, test_data):\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
     "        uid_series = dataset.token2id(dataset.uid_field, [external_user_id])\n",
@@ -1787,7 +1786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "dacd5516",
    "metadata": {
     "execution": {
@@ -1823,7 +1822,7 @@
     }
    ],
    "source": [
-    "predict_for_all_item(\"0109ad0b5a76924a1b58be677409bb601cc8bead9a87b8ce5b08a4a1f5bc71ef\", dataset, model)"
+    "predict_for_all_item(\"0109ad0b5a76924a1b58be677409bb601cc8bead9a87b8ce5b08a4a1f5bc71ef\", dataset, model, test_data)"
    ]
   },
   {
