--- a/run_example/tSNE embedding visualisation.ipynb
+++ b/run_example/tSNE embedding visualisation.ipynb
@@ -40,8 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint_name = \"TransE-Jan-23-2025_16-48-43.pth\"\n",
-    "checkpoint_name = \"TransE-Jan-23-2025_16-48-43.pth\""
+    "checkpoint_name = \"TransR_lfm1m_small.pth\""
    ]
   },
   {
@@ -124,7 +123,7 @@
    "outputs": [],
    "source": [
     "user_weights = checkpoint[\"state_dict\"][\"user_embedding.weight\"]\n",
-    "tsne_embeddings_users = tsne.fit(user_weights)\n",
+    "tsne_embeddings_users = tsne.fit(user_weights)  \n",
     "tsne_embeddings_users = tsne.fit(user_weights)"
    ]
   },
@@ -237,6 +236,7 @@
     "        height=1024,\n",
     "        template=\"plotly_white\",\n",
     "    )\n",
+    "    \n",
     "    fig.show()"
    ]
   },
@@ -266,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
