--- a/run_example/1_Train_TransE_and_Preprocess_Embeddings.ipynb
+++ b/run_example/1_Train_TransE_and_Preprocess_Embeddings.ipynb
@@ -31,7 +31,7 @@
    },
    "outputs": [],
    "source": [
-    "checkpoint_name = \"saved/TransH_lfm1m_small.pth\""
+    "checkpoint_name = \"saved/.....pth\""
    ]
   },
   {
