updates and improvements

--- a/run_example/convert_items_to_sentenceTransformer.ipynb
+++ b/run_example/convert_items_to_sentenceTransformer.ipynb
@@ -51,24 +51,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = \"/home/recsysdatasets\"\n",
-    "dataset = \"ml-1m_small\"\n",
-    "sentence_trf_bs = 2048 # set the highest bs that fits in your GPU memory\n",
+    "data_path = \"\"\n",
+    "dataset = \"\"\n",
+    "sentence_trf_bs = 2048 # set the highest bs that fit in your GPU memory\n",
     "sentence_trf_model = \"sentence-transformers/sentence-t5-base\" # size 768\n",
     "apply_pca = True\n",
     "sentence_trf_pca_components = 128\n",
     "openai_api_key = None\n",
-    "separator = ' '"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**specify which columns to use as metadata**\n",
-    "\n",
-    "\n",
-    "*they depend on the dataset. In this case, it's for ml-100k.*"
+    "separator = ' '\n",
+    "gpu_id = 1"
    ]
   },
   {
@@ -77,8 +68,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# la colonna feature non l'ho trovata nei metadata amazon.\n",
-    "columns_to_concatenate = ['movie_title', 'release_year', 'class']"
+    "import os\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = str(gpu_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**specify which columns in the raw dataset to use as metadata**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns_to_concatenate = ['title', 'price', 'brand', 'feature', 'categories', 'description']"
    ]
   },
   {
@@ -94,7 +101,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\""
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(device)"
    ]
   },
   {
