fixes and updates

--- a/run_example/convert_items_to_sentenceTransformer.ipynb
+++ b/run_example/convert_items_to_sentenceTransformer.ipynb
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns_to_concatenate = ['title', 'price', 'brand', 'feature', 'categories', 'description']"
+    "columns_to_concatenate = ['name']"
    ]
   },
   {
